# code

./: .envrc  .gitignore  .gitlab-ci.yml  .gitpod.Dockerfile  .gitpod.yml  Cargo.toml  LICENSE  Makefile  README.md  build.zig  devenv.nix  devenv.yaml  flake.nix  rust-toolchain.toml  rustfmt.toml
.github/workflows/: docs.yaml
.gitpod/: Dockerfile  nix-install.sh
crates/commands/: Cargo.toml
crates/commands/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/editor/: Cargo.toml
crates/editor/src/: buffer.rs  editor.rs  lib.rs  movement.rs
crates/rope/: Cargo.toml
crates/rope/src/: cursor.rs  error.rs  lib.rs  slab.rs  util.rs
crates/selector/: Cargo.toml
crates/selector/src/: lib.rs
crates/sumtree/: Cargo.toml
crates/sumtree/src/: cursor.rs  lib.rs  macros.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: client.rs  highlighter.rs  language.rs  lib.rs
crates/toku/: Cargo.toml
crates/toku/src/: app.rs  main.rs
crates/ui/: Cargo.toml
crates/ui/src/: commands_pane.rs  editor_pane.rs  lib.rs  selector_pane.rs  theme.rs
docs/: book.toml
docs/src/: README.md  SUMMARY.md  buffers_and_ropes.md
docs/src/for_developers/: buffers_and_ropes.md
docs/theme/css/: main.css
fuzz/: .gitignore  Cargo.toml
fuzz/artifacts/rope_operations/: regression-28233c1f8c68e60021d1fafee4040443cc7ebbc2  regression-5d611abb0b907e9b7310ed4b3286afaccebcab1e
fuzz/fuzz_targets/: rope_operations.rs
rust/rope/: Cargo.toml
rust/rope/src/: mod.rs  rope.rs  slab.rs  tree.rs  util.rs
rust/sumtree/: Cargo.toml
rust/sumtree/src/: cursor.rs  sumtree.rs
src/: app.rs  buffer.rs  editor.rs  editor.zig  error.rs  lib.rs  main.zig  rope.rs  rope.zig  theme.rs  treesitter.zig
src/rope/: block.rs  cursor.rs  error.rs  iterator.rs  macros.rs  mod.rs  rope.rs  slice.rs  tree.rs
src/syntax/: highlighter.rs  language.rs  mod.rs
src/term/: display.rs  keyboard.rs  mod.rs  stdin.rs  termios.rs
src/widgets/: editor_pane.rs  mod.rs
