[workspace]
resolver = "2"
members = [
    "crates/toku",
    "crates/editor",
    "crates/syntax",
    "crates/ui",
]

[workspace.dependencies]
ui = { path = "./crates/ui" }
editor = { path = "./crates/editor" }
syntax = { path = "./crates/syntax" }

anyhow = "1.0.75"
crossterm = { version = "0.27.0", default-features = false, features = [
  "event-stream",
  "bracketed-paste",
] }
futures = "0.3.29"
iset = "0.2"
lazy_static = "1.4.0"
ratatui = { version = "0.24.0", default-features = false, features = [
    "crossterm",
] }
slotmap = "1.0.7"
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "io-std",
    "io-util",
    "fs",
    "tracing",
] }
tracing = "0.1.40"
