[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/editor",
    # "crates/rope",
    # "crates/sumtree",
    "crates/selector",
    "crates/syntax",
    "crates/toku",
    "crates/ui",
]

[workspace.dependencies]
editor = { path = "./crates/editor" }
rope = { package = "ropey", version = "1.6" }
# rope = { path = "./crates/rope" }
# sumtree = { path = "./crates/sumtree" }
selector = { path = "./crates/selector" }
syntax = { path = "./crates/syntax" }
tore = { path = "./crates/core" }
ui = { path = "./crates/ui" }

anyhow = "1.0.75"
bstr = "1.7.0"
crossterm = { version = "0.27.0", default-features = false, features = [
  "event-stream",
  "bracketed-paste",
] }
futures = "0.3.29"
iset = "0.2"
lazy_static = "1.4.0"
ratatui = { version = "0.24.0", default-features = false, features = [
    "crossterm",
] }
slotmap = "1.0.7"
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "io-std",
    "io-util",
    "fs",
    "tracing",
] }
tracing = "0.1.40"
tree-sitter = "0.20"
