[package]
name = "commands"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "commands"
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tore.workspace = true

tokio.workspace = true
crossterm.workspace = true
tracing.workspace = true
slotmap.workspace = true

fuzzy-matcher = "0.3"
bitflags = "2.5"

