[package]
name = "editor"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "editor"
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow.workspace = true
crossterm.workspace = true
slotmap.workspace = true
tokio.workspace = true
iset.workspace = true
tracing.workspace = true

rope.workspace = true
tore.workspace = true

tokio-stream = {version = "0.1", features = ["io-util"]}
