[package]
name = "rope"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "rope"
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tore.workspace = true

tokio.workspace = true
sumtree.workspace = true
anyhow.workspace = true
bstr.workspace = true

bytecount = "0.6"
memchr = "2.7"
circular-buffer = "0.1.7"
