[package]
name = "syntax"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "syntax"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
editor.workspace = true

anyhow.workspace = true
futures.workspace = true
iset.workspace = true
tokio.workspace = true
tracing.workspace = true

tree-sitter = "0.20"
tree-sitter-rust = "0.20"
