[package]
name = "toku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow.workspace = true
tokio.workspace = true
futures.workspace = true
lazy_static.workspace = true
tracing.workspace = true

clap = { version = "4.0", features = ["derive"] }
crossterm = { version = "0.27.0", default-features = false, features = [
  "event-stream",
  "bracketed-paste",
] }
ratatui = { version = "0.24.0", default-features = false, features = [
    "crossterm",
] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
xdg = "2.5.2"
