[package]
name = "toku"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
editor.workspace = true
rope.workspace = true
selector.workspace = true
syntax.workspace = true
tore.workspace = true
ui.workspace = true

bstr.workspace = true
anyhow.workspace = true
crossterm.workspace = true
futures.workspace = true
lazy_static.workspace = true
ratatui.workspace = true
slotmap.workspace = true
tokio.workspace = true
tracing.workspace = true
tree-sitter.workspace = true

clap = { version = "4.0", features = ["derive"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
xdg = "2.5.2"
