[package]
name = "ui"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "ui"
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
editor.workspace = true
tore.workspace = true
commands.workspace = true

bstr.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tracing.workspace = true
